# job-application-automation

./: .continue-here.md  .env.example  .gitignore  CLAUDE.md  docker-compose.yml  main.py  pyproject.toml
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: eligibility.yaml  profile.yaml
deploy/: Caddyfile.recaptcha.snippet  README.md  stack.job-app-browser.snippet.yml
docker/: Dockerfile  Dockerfile.api  Dockerfile.browser  supervisord.conf
n8n/: README.md
n8n/workflows/: ai-apply-pipeline.json  error-handler.json  gmail-ingest.json  heartbeat.json  jobspy-scrape.json  kalibrr-scrape.json  linkedin-easy-apply.json
scripts/: capture_sdui_apply.py  gmail_oauth.py  linkedin_session_save.py  validate_easy_apply_selector.py
src/: audit_log.py  notify.py
src/api/: app.py  schemas.py
src/browser/: __init__.py  linkedin_applier.py
src/filter/: config_loader.py  dedup.py  eligibility.py
src/ingestion/: gmail_client.py  jobspy_runner.py  kalibrr_scraper.py
src/preparation/: profile_loader.py  resume_reader.py  screening.py
src/queue/: db.py  models.py
tests/api/: test_apply_routes.py
tests/browser/: test_linkedin_applier.py
tests/integration/: test_application_endpoints.py  test_cli.py  test_db_init.py  test_dedup.py  test_dry_run_pipeline.py  test_gmail_endpoints.py  test_ingest_endpoint.py  test_profile_endpoint.py  test_resume_endpoint.py  test_scrape_endpoints.py  test_screening_answers.py
tests/unit/: test_config_loader.py  test_eligibility.py  (+4 more)
(+63 files in other folders)
