[project]
name = "job-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20",
    "sqlalchemy[asyncio]>=2.0",
    "greenlet>=3.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "tenacity>=8.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
