[project]
name = "job-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20",
    "sqlalchemy[asyncio]>=2.0",
    "greenlet>=3.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "tenacity>=8.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "python-jobspy>=1.1.82",
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.0",
    "google-auth>=2.20",
    "python-docx>=1.0",
    "pymupdf>=1.23",
    "anthropic>=0.20",
    "httpx>=0.25",
    "beautifulsoup4>=4.12",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
